# aou-workbench

./: .gitignore  README.md  pyproject.toml
configs/: workbench.yaml
configs/eir/: analysis.yaml  cohort.yaml  panel.yaml  phenotype.yaml
configs/rhabdo/: analysis.yaml  analysis_omop_only.yaml  cohort.yaml  panel.yaml  phenotype.yaml
configs/rhabdo_ck_confirmed/: analysis.yaml  cohort.yaml
docs/: git_workflow.md  rhabdo_phenotype.md  workbench_bootstrap.md
notebooks/: 01_workbench_bootstrap.ipynb  02_rhabdo_end_to_end.ipynb
scripts/: aou_broad_wgs_acaf_hail_gwas.sh  aou_broad_wgs_chr21_hail_smoke.sh
sql/: rhabdo_covariates.sql  rhabdo_definite_cases.sql  rhabdo_probable_cases.sql
src/aou_workbench/: __init__.py  annotations.py  cli.py  clinical_model.py  clinical_prs_model.py  cohort.py  cohort_summary.py  config.py  eir.py  gwas_workflow.py  hail_utils.py  incident_feasibility.py  io_utils.py  svg.py  (+24 more)
tests/: support.py  test_annotations.py  test_clinical_model.py  test_clinical_prs_model.py  test_cohort.py  test_cohort_summary.py  test_config.py  test_eir.py  test_gwas_workflow.py  test_hail_utils.py  test_io_utils.py  test_matching.py  test_microarray_bigsnpr.py  test_microarray_plink_gwas.py  test_microarray_plink_prs.py  test_model_comparison.py  test_paths.py  test_pipeline.py  test_preflight.py  test_preindex_profile.py  test_presentation_dashboard.py  test_prs_diagnostics.py  test_regenie.py  test_reporting.py  test_sql.py  test_stage1_prepare.py  test_stage1_prior_variants.py  test_stage2_plp_panel.py  test_stage4_hail_gwas.py  test_statistics.py
